feat: full i18n (EN/HY) + Gradle migration
- i18n infrastructure: React Context-based system (I18nProvider, useT, useI18n)
- English (en.ts) and Armenian (hy.ts) translations (~550+ keys each)
- Language switcher (EN/HY) in sidebar footer with localStorage persistence
- All 15 pages translated
- Build migrated from Maven to Gradle (build.gradle.kts)
- Updated .gitignore for Gradle artifacts
- Session snapshot updated